big refactor, organisation of ws, word validation

--- a/public/index.html
+++ b/public/index.html
@@ -41,9 +41,7 @@
         }
 
 
-      const enterLobby = document.getElementById("enterLobby");
-
-    //   const ws = new WebSocket("ws://localhost:3000");
+      const enterLobby = document.getElementById("enterLobby");;
 
       const name = document.getElementById("name");
 
