--- a/public/board/index.html
+++ b/public/board/index.html
@@ -3,11 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+    crossorigin="anonymous"
+  />
     <title>Vocablo</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>Vocablo</h1>
+    <h1 id="h1">Vocablo</h1>
 
     <div class="container">
       <div>
@@ -20,9 +26,9 @@
         </div>
 
         <div id="control">
-          <div id="turn">Turn: Player 1</div>
+          <div id="currentPlayerName">Wait...</div>
 
-          <button id="submit">Submit</button>
+          <button class="btn btn-dark" id="submit">Submit</button>
         </div>
       </div>
 
@@ -34,7 +40,7 @@
       </div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="script.js"  defer></script>
     
   </body>
 </html>
