--- a/public/board/index.html
+++ b/public/board/index.html
@@ -4,43 +4,58 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-    crossorigin="anonymous"
-  />
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
     <title>Vocablo</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1 id="h1">Vocablo</h1>
+    <h1 id="h1" class="mt-4 text-center">Vocablo</h1>
 
-    <div class="container">
-      <div>
+    <div class="container mt-4">
+      <div class="boardSide">
         <table id="gameBoard">
           <tbody></tbody>
         </table>
 
-        <div class="timer">
-          <div id="timerProgress"></div>
+        <div class="progress my-4">
+          <div
+            id="timerProgress"
+            class="progress-bar bg-danger"
+            role="progressbar"
+            aria-valuenow="0"
+            aria-valuemin="0"
+            aria-valuemax="100"
+          ></div>
         </div>
 
-        <div id="control">
-          <div id="currentPlayerName">Wait...</div>
+        <div
+          id="control"
+          class="mx-1 my-4 d-flex justify-content-between align-items-center"
+        >
+          <div id="currentPlayerName"></div>
 
-          <button class="btn btn-dark" id="submit">Submit</button>
+          <button class="btn btn-secondary btn-sm" id="submit" disabled>
+            Submit
+          </button>
         </div>
+        <div
+          id="message"
+          class="mx-1 my-4 bg-secondary text-white p-2 rounded"
+        ></div>
       </div>
 
       <div>
-        <table id="scoreBoard">
-          <thead></thead>
+        <table class="table table-secondary" id="scoreBoard">
+          <thead class="thead-light"></thead>
           <tbody></tbody>
         </table>
       </div>
     </div>
 
-    <script src="script.js"  defer></script>
-    
+    <script src="script.js" defer></script>
   </body>
 </html>
